<resources>

    <string name="app_name">Momentia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Nav  -->
    <string name="bottom_menu_chat">Chat</string>
    <string name="bottom_menu_camera">Camera</string>
    <string name="bottom_menu_friend">Friends</string>
    <string name="profile">Profile</string>

    <!--  Friend  -->
    <string name="add_friend">Add Friend</string>
    <string name="search">Search…</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="tap_to_send_message">Tap to send message</string>
    <string name="back">Back</string>
    <string name="add_friends">Add friends</string>
    <string name="add">Add</string>
    <string name="quick_add">Quick add</string>
    <string name="added_me">Added me</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <!--    Login-->
    <string name="logo_desc">momentia_logo</string>
    <string name="momentia">MOMENTIA</string>
    <string name="login">Log in to your account</string>
    <string name="email_input_message">Email address</string>
    <string name="password_input_message">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_button">Log in</string>
    <string name="google_button">Log in with Google</string>
    <string name="create_account">Don\'t have account? Create Account</string>

    <!--    Register-->
    <string name="back_button">back</string>
    <string name="whats_your_email">What\'s your email?</string>
    <string name="email_verification">Email Verification</string>
    <string name="choose_your_password">Choose your password</string>
    <string name="continue_button">Continue</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="whats_your_number">What\'s your number?</string>
    <string name="phone_number">Phone number</string>
    <string name="whats_your_username">What\'s your username?</string>
    <string name="username">Username</string>

    <!--    Profile-->
    <string name="profile_title">My Profile</string>
    <string name="profile_image">profile image</string>
    <string name="general">General</string>
    <string name="icon">icon</string>
    <string name="account_details">Account details</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="edit_name">Edit name</string>
    <string name="change_username">Change username</string>
    <string name="change_password">Change password</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="friends">Friends</string>
    <string name="my_friends">My friends</string>
    <string name="account_actions">Account actions</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>

    <!--    Modal Delete-->
    <string name="delete_confirmation">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--    Edit Profile-->
    <string name="your_account_details">Your account details</string>
    <string name="edit_your_name">Want to edit your name?</string>
    <string name="save">Save</string>
    <string name="change_your_username">Change your username?</string>
    <string name="current_username">Your current username</string>
    <string name="new_username">New username</string>
    <string name="change_your_password">Change your password?</string>
    <string name="current_password">Your current password</string>
    <string name="new_password">New password</string>
    <string name="change_your_number">Change your number?</string>
    <string name="current_number">Your current phone number</string>
    <string name="new_number">New phone number</string>

    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="password">Change password?</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="button_camera">button camera</string>
    <string name="memories">Memories</string>

    <string name="chats">Chats</string>
    <string name="search_a_friend">Search a friend</string>
    <string name="send_a_message">Send a message</string>
    <string name="open_gallery">Open gallery</string>
    <string name="new_chat">New chat</string>
    <string name="last_message">Last message</string>

    <!-- Camera -->
    <string name="button_tick">Button Tick</string>
    <string name="send_button">Send To Friend</string>
    <string name="takeapic">Capture your favorite moments today</string>
    <string name="takeapic2">Smile and click the button, cheese!</string>
    <string name="close">close</string>
    <string name="captured_image">captured image</string>
    <string name="gallery">gallery</string>
    <string name="retake_photo">retake photo</string>
    <string name="send_to">Send to</string>

    <!-- Memories-->
    <string name="image_message">Image</string>
    <string name="memories_image">memories-image</string>
    <string name="search_hint">Search</string>
    <string name="asterisk">*</string>
    <string name="loading">Loading...</string>
    <string name="no_friends_found">No friend found</string>
    <string name="delete_friend">Delete friend</string>

</resources>