<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Camera.CameraActivity">

    <ImageView
        android:id="@+id/capturedImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/captured_image" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:scaleType="centerInside"
        android:src="@drawable/close"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:scaleType="centerInside"
        android:src="@drawable/back"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/circle_profile"
        android:contentDescription="@string/save"
        android:elevation="12dp"
        android:src="@drawable/save_button"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sendToFriendButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/send_to"
        android:textColor="@color/dark_brown"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/save"
        android:elevation="12dp"
        android:gravity="center"
        android:visibility="gone"
        app:drawableEndCompat="@drawable/sendto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/galleryButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/gallery"
            android:scaleType="centerInside"
            android:src="@drawable/gallery_photo" />

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/takeapic"
            android:scaleType="centerInside"
            android:src="@drawable/camera" />

        <ImageButton
            android:id="@+id/retakeButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/retake_photo"
            android:scaleType="centerInside"
            android:src="@drawable/retake" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>