<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back_button"
        android:elevation="12dp" />

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="false"
        android:contentDescription="@string/memories_image"
        android:scaleType="centerCrop" />

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/circle_profile"
        android:contentDescription="@string/save"
        android:elevation="12dp"
        android:src="@drawable/save_button" />

</RelativeLayout>
