<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginHorizontal="16dp"
    tools:context=".Profile.ChangeUsernameFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:paddingStart="8dp"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/back_button"
        android:background="@drawable/circle_back"
        android:backgroundTint="@color/app_bar"
        android:elevation="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/momentia_logo"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/momentia"
        android:textColor="@color/momentia"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@drawable/underline"
        app:layout_constraintEnd_toEndOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="@id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/change_username_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/change_your_username"
        android:textColor="@color/dark_brown"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currentUsernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/current_username"
        android:textColorHint="@color/dark_brown"
        app:hintTextColor="@color/dark_brown"
        app:boxStrokeColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_username_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/current_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/dark_brown" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newUsernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:textColorHint="@color/dark_brown"
        app:hintTextColor="@color/dark_brown"
        app:boxStrokeColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentUsernameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_username"
            android:textColor="@color/dark_brown" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/dark_brown"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newUsernameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
