<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Friend.FriendFragment">

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle_profile_button"
        android:contentDescription="@string/profile"
        android:src="@drawable/person"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/bottom_menu_friend"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/add_friend_button"
        app:layout_constraintStart_toEndOf="@+id/profile_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_friend_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/add_friend"
        android:src="@drawable/add_friend"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/asterisk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asterisk"
        android:textColor="@color/dark_red"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/add_friend_button"
        app:layout_constraintEnd_toEndOf="@+id/add_friend_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/add_friend_button"
        app:layout_constraintTop_toTopOf="@+id/add_friend_button"
        app:layout_constraintVertical_bias="0.19999999" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_friend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/search_view_bg"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:queryHint="@string/search" />

    <TextView
        android:id="@+id/warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:text="@string/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_friend" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_friend">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friend_chat_recycler"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            app:layout_constraintTop_toBottomOf="@+id/search_friend" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>