<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.PasswordFragment"
    android:layout_margin="16dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingStart="8dp"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/back_button"
        android:background="@drawable/circle_back"
        android:backgroundTint="@color/app_bar"
        android:elevation="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/passwordTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/email_verification"
        android:textColor="@color/dark_brown"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_your_password"
        android:textColor="@color/dark_brown"
        android:textStyle="bold"
        android:textSize="20sp"
        android:autofillHints="password"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTitleTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="14dp"
        android:textColorHint="@color/dark_brown"
        app:hintTextColor="@color/dark_brown"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/app_bar"
        app:boxStrokeColor="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/choose_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_input_message"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textColor="@color/dark_brown" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordRequirementsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/dark_brown"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/dark_brown"
        android:text="@string/continue_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginHorizontal="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordRequirementsTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
