<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/memories_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/memories"
        android:src="@drawable/memories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        android:textColor="@color/dark_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memories_button" />

    <TextView
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/takeapic"
        android:textColor="@color/dark_brown"
        app:layout_constraintBottom_toTopOf="@+id/camera_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/camera_button"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginVertical="80dp"
        android:background="@drawable/circle_back"
        android:contentDescription="@string/button_camera"
        android:src="@drawable/camera_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reminder" />

</androidx.constraintlayout.widget.ConstraintLayout>
